--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
+    "joi": "^17.6.0",
     "qs": "^6.11.0"
   },
   "devDependencies": {
