--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yok-atlas-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon",
     "lint": "eslint",
