--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "yok-atlas",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon",
     "lint": "eslint",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/index.js"
+    "version": "npm run build && git add -A dist",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [
     "YÖK",
